--- a/src/app/add-rfp/add-rfp.component.html
+++ b/src/app/add-rfp/add-rfp.component.html
@@ -15,7 +15,7 @@
           <div class="col-md-6 col-sm-6">
             <div class="input-group">
               <mat-form-field>
-                <input matInput placeholder="Title" name="title" required #updatedtitle />
+                <input matInput placeholder="Title" name="title" [(ngModel)]="data.title" required  />
 
               </mat-form-field>
             </div>
@@ -24,7 +24,7 @@
             <div class="input-group">
 
               <mat-form-field>
-                <input matInput placeholder="RFP Number" name="rfp_number" #updatedrfp_number />
+                <input matInput placeholder="RFP Number" name="rfp_number" [(ngModel)]="data.rfp_number" />
 
               </mat-form-field>
             </div>
@@ -33,7 +33,7 @@
             <div class="input-group">
 
               <mat-form-field>
-                <input matInput placeholder="RFP Key" name="rfpkey" #uprfpkey />
+                <input matInput placeholder="RFP Key" name="rfpkey" [(ngModel)]="data.rfpkey" />
 
               </mat-form-field>
             </div>
@@ -43,7 +43,7 @@
             <div class="input-group">
               <mat-form-field>
 
-                <mat-select name="states" placeholder="State" #updatedstates>
+                <mat-select name="states" placeholder="State" [(ngModel)]="data.states">
                   <input class="inp" type="text" [(ngModel)]="statsearch" [ngModelOptions]="{standalone: true}" class="search-allstates"
                     placeholder="Search By State">
                   <i class="fa fa-search s-icon-all-states" area-hidden="true"></i>
@@ -53,21 +53,13 @@
               </mat-form-field>
             </div>
           </div>
-          <div class="col-md-6 col-sm-6">
-            <div class="input-group">
-
-              <mat-form-field>
-                <input matInput placeholder="Agency" name="agency" value="{{data.agency}}" #updatedagency />
-
-              </mat-form-field>
-            </div>
-          </div>
+          
           <div class="col-md-6 col-sm-6">
             <div class="input-group">
 
               <mat-form-field>
 
-                <mat-select [(ngModel)]="data.agency" name="agency" placeholder="Select Agency" #updatedagency>
+                <mat-select [(ngModel)]="data.agency" name="agency" placeholder="Select Agency" [(ngModel)]="data.agency">
                   <input class="inp" type="text" [(ngModel)]="agensearch" [ngModelOptions]="{standalone: true}" class="search-allstates"
                     placeholder="Search By Agency">
                   <i class="fa fa-search s-icon-all-states" area-hidden="true"></i>
@@ -76,21 +68,23 @@
                 </mat-select>
               </mat-form-field>
             </div>
+            <button class="btn btn-primary mg-0"  (click)="acgeny_check()" >Others</button>
           </div>
-          <div class="col-md-6 col-sm-6">
-            <div class="input-group">
-
-              <mat-form-field>
-                <input matInput placeholder="Category" name="category" value="{{data.category}}" #updatedcategory
-                  (change)="subcategory(updatedcategory.value)" />
-              </mat-form-field>
+          <div class="col-md-6 col-sm-6" *ngIf="agency==true">
+              <div class="input-group">
+  
+                <mat-form-field>
+                  <input matInput placeholder="Agency" name="agency" [(ngModel)]="data.agency"/>
+  
+                </mat-form-field>
+              </div>
             </div>
-          </div>
+          
           <div class="col-md-6 col-sm-6">
             <div class="input-group">
 
               <mat-form-field>
-                <mat-select [(ngModel)]=data.category name="category" placeholder="Select Category" (change)="subcategory(updatedcategory.value)"
+                <mat-select [(ngModel)]="data.category" name="category" placeholder="Select Category" (change)="subcategory(updatedcategory.value)"
                   #updatedcategory multiple>
                   <input class="inp" type="text" [(ngModel)]="catsearch" [ngModelOptions]="{standalone: true}"
                     placeholder="Search By Category" class="search-allstates">
@@ -100,22 +94,24 @@
                 </mat-select>
               </mat-form-field>
             </div>
+            <button class="btn btn-primary mg-0" (click)="cat_check()">Others</button>
           </div>
-          <div class="col-md-6 col-sm-6">
-            <div class="input-group">
-
-              <mat-form-field class="category-edit-rfp">
-                <input matInput placeholder="Sub Category" name="subcat" value={{data.subcat}} #updatedsubcat />
-
-              </mat-form-field>
+          <div class="col-md-6 col-sm-6" *ngIf="category==true">
+              <div class="input-group">
+  
+                <mat-form-field>
+                  <input matInput placeholder="Category" name="category" [(ngModel)]="data.category" #updatedcategory
+                    (change)="subcategory(updatedcategory.value)" />
+                </mat-form-field>
+              </div>
             </div>
-          </div>
+          
           <div class="col-md-6 col-sm-6">
             <div class="input-group">
 
               <mat-form-field class="category-edit-rfp">
 
-                <mat-select [(ngModel)]=data.subcat name="subcat" placeholder="Select Sub Category" #updatedsubcat
+                <mat-select [(ngModel)]="data.subcat" name="subcat" placeholder="Select Sub Category" 
                   multiple>
                   <input class="inp" type="text" [(ngModel)]="subcatsearch" [ngModelOptions]="{standalone: true}"
                     placeholder="Search By Sub Category" class="search-allstates">
@@ -125,12 +121,22 @@
                 </mat-select>
               </mat-form-field>
             </div>
+            <button class="btn btn-primary mg-0" (click)="subchk()">Others</button>
           </div>
+          <div class="col-md-6 col-sm-6" *ngIf="subcate==true">
+              <div class="input-group">
+  
+                <mat-form-field class="category-edit-rfp">
+                  <input matInput placeholder="Sub Category" name="subcat" [(ngModel)]="data.subcat" />
+  
+                </mat-form-field>
+              </div>
+            </div>
           <div class="col-md-6 col-sm-6">
             <div class="input-group">
 
               <mat-form-field>
-                <input matInput placeholder="seoTitleUrl" name="seoTitleUrl" #updatedseoTitleUrl />
+                <input matInput placeholder="seoTitleUrl" name="seoTitleUrl" [(ngModel)]="data.seoTitleUrl" />
 
               </mat-form-field>
             </div>
@@ -139,7 +145,7 @@
             <div class="input-group">
 
               <mat-form-field>
-                <input matInput placeholder="Bid Type" name="bid_type" #updatedbid_type />
+                <input matInput placeholder="Bid Type" name="bid_type" [(ngModel)]="data.bid_type" />
 
               </mat-form-field>
             </div>
@@ -148,7 +154,7 @@
             <div class="input-group">
 
               <mat-form-field>
-                <input matInput placeholder="Agency Type" name="agency_type" #updatedagency_type />
+                <input matInput placeholder="Agency Type" name="agency_type" [(ngModel)]="data.agency_type" />
 
               </mat-form-field>
             </div>
@@ -157,25 +163,17 @@
             <div class="input-group">
 
               <mat-form-field>
-                <input matInput placeholder="City or County" name="city_or_county" #updatedcity_or_county />
+                <input matInput placeholder="City or County" name="city_or_county" [(ngModel)]="data.city_or_county" />
 
               </mat-form-field>
             </div>
           </div>
+         
           <div class="col-md-6 col-sm-6">
             <div class="input-group">
 
               <mat-form-field>
-                <input matInput placeholder="Open Rfp" name="open_rfp" #updatedopen_rfp />
-
-              </mat-form-field>
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-6">
-            <div class="input-group">
-
-              <mat-form-field>
-                <input matInput placeholder="City" name="city" #updatedcity />
+                <input matInput placeholder="City" name="city" [(ngModel)]="data.city" />
 
               </mat-form-field>
             </div>
@@ -186,7 +184,7 @@
               <mat-form-field>
                 <!-- <input matInput placeholder="Posted Date" name="date_entered" value="{{data.date_entered}}" #updateddate_entered /> -->
                 <input matInput [matDatepicker]="startPicker" (focus)="startPicker.open()" name="date_entered"
-                  #updateddate_entered placeholder="Posted Date" />
+                [(ngModel)]="data.date_entered" placeholder="Posted Date" />
                 <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
                 <mat-datepicker #startPicker color="warn"></mat-datepicker>
               </mat-form-field>
@@ -199,7 +197,7 @@
                 <!-- <input matInput placeholder="Submission Date" name="due_date" value="{{data.due_date}}" #u  pdateddue_date /> -->
 
                 <input matInput [matDatepicker]="startPicker1" (focus)="startPicker1.open()" name="due_date"
-                  #updateddue_date placeholder="Submission Date" />
+                [(ngModel)]="data.due_date" placeholder="Submission Date" />
                 <mat-datepicker-toggle matSuffix [for]="startPicker1"></mat-datepicker-toggle>
                 <mat-datepicker #startPicker1 color="warn"></mat-datepicker>
               </mat-form-field>
@@ -212,7 +210,7 @@
 
               <mat-form-field>
 
-                <input matInput placeholder="Web Information PDF" name="web_info" #updatedweb_info />
+                <input matInput placeholder="Web Information PDF" name="web_info" [(ngModel)]="data.web_info" />
 
               </mat-form-field>
             </div>
@@ -221,11 +219,25 @@
             <div class="input-group margin-zero1">
 
               <mat-form-field>
-                <input matInput placeholder="Rfp Reference" name="rfp_reference" #updatedrfp_reference />
+                <input matInput placeholder="Rfp Reference" name="rfp_reference" [(ngModel)]="data.rfp_reference" />
 
               </mat-form-field>
             </div>
           </div>
+          <div class="col-md-6 col-sm-6">
+              <div class="input-group">
+                  <input type="checkbox"  name="open_rfp" [(ngModel)]="data.open_rfp" >
+                      Open Rfp
+                 
+                  <input type="checkbox"  name="record_added" [(ngModel)]="data.record_added" >
+                      record_added
+                
+                <!-- <mat-form-field>
+                  <input matInput placeholder="Open Rfp" name="open_rfp" #updatedopen_rfp />
+  
+                </mat-form-field> -->
+              </div>
+            </div>
           <div class="col-md-12 col-sm-12">
             <div class="input-group">
               <ckeditor [(ngModel)]="data.descriptionTag" name="descriptionTag">
@@ -239,7 +251,7 @@
           <div class="col-md-12 col-sm-12">
 
             <div class=" text-center">
-              <button type="submit" class="btn btn-fill" (click)="editClick(updatedtitle.value,updatedrfp_number.value,uprfpkey.value,data.descriptionTag,updatedstates.value,updatedagency.value,updateddate_entered.value,updateddue_date.value,updatedrfp_reference.value,updatedcategory.value,updatedsubcat.value,updatedseoTitleUrl.value,updatedbid_type.value,updatedagency_type.value,updatedcity_or_county.value,updatedcity.value,updatedweb_info.value,updatedopen_rfp.value)"
+              <button type="submit" class="btn btn-fill" (click)="editClick()"
                 data-dismiss="modal">Submit</button>
 
               <button type="button" class="btn btn-fill" data-dismiss="modal">Cancel</button>
