--- a/src/app/our-team/our-team.component.html
+++ b/src/app/our-team/our-team.component.html
@@ -37,8 +37,7 @@
           <img alt="Smarter e-Learning" src="../../assets/img/Smarter-E-Learning.png">
         </div>
         <p class="text-left">Unbeatable Pricing. Only One Package. All the Features Included Nationwide. No Gimmicks.
-          No Hidden Fees. RFPGurus is your essential WINNING Partner in Government RFP Bidding.<a routerlink="/" href="/"><strong
-             > Learn More.</strong></a></p>
+          No Hidden Fees. RFPGurus is your essential WINNING Partner in Government RFP Bidding.</p>
       </div>
       <div class="col-md-3 col-sm-6">
         <h4 ><strong>Next Generation Platform <br>=<br> Smarter Bidding</strong></h4>
@@ -47,7 +46,7 @@
         </div>
         <p class="text-left">RFPGurus is a next generation Artificially Intelligent Web and Mobile Platform for
           Nationwide Government Bidding: Full-Spectrum 360-Degree Coverage for Federal, State, County &amp; Local RFPs.
-          <a routerlink="/" href="/"><strong > Learn More.</strong></a></p>
+          </p>
       </div>
       <div class="col-md-3 col-sm-6">
         <h4 >Web &amp; Mobile Apps <br>=<br> Easy &amp; Intuitive Access</h4>
@@ -56,7 +55,7 @@
         </div>
         <p class="text-left">RFPGurus is easily accessible on Web, iOS &amp; Android platforms. Download our next
           generation Apps on the platform of your choice to experience RFP Searching and Bidding like <strong>
-            NEVER BEFORE</strong>. <a routerlink="/" href="/"><strong > Learn More.</strong></a></p>
+            NEVER BEFORE</strong>. </p>
       </div>
       <div class="col-md-3 col-sm-6">
         <h4 >RFP as a Service <br>=<br> Custom Services</h4>
@@ -64,8 +63,7 @@
           <img alt="Democratized Pricing" src="../../assets/img/Democratized-Pricing.png">
         </div>
         <p class="text-left">RFPGurus provides customized end-to-end services for creating perfectly crafted Government
-          RFP Proposals for your business for Federal, State, County, City &amp; Local RFPs. <a routerlink="/" href="/"><strong
-              > Learn More.</strong></a></p>
+          RFP Proposals for your business for Federal, State, County, City &amp; Local RFPs. </p>
       </div>
     </div>
   </div>
