--- a/src/app/all/all-rfps/all-rfps.component.html
+++ b/src/app/all/all-rfps/all-rfps.component.html
@@ -21,7 +21,7 @@
               <div class="row">
                 <div class="col-sm-12">
                   <div class="card-header card-header-text" data-background-color="purple">
-                    <a class="curser-pointer" [routerLink]="['/rfp/', rfp.seoTitleUrl]" (click)="move()">
+                    <a class="curser-pointer" [routerLink]="['/rfp']"[queryParams]="{query:rfp.seoTitleUrl}" (click)="move()">
                       <h4 class="card-title">{{rfp.rfpkey}}</h4>
                     </a>
                   </div>
@@ -33,7 +33,7 @@
                 <div class="card-content">
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 plan-detail">
                     <h3>
-                      <a class="curser-pointer" [routerLink]="['/rfp/', rfp.seoTitleUrl]" (click)="move()">
+                      <a class="curser-pointer" [routerLink]="['/rfp']"[queryParams]="{query:rfp.seoTitleUrl}" (click)="move()">
                         {{rfp.title}}</a>
                     </h3>
                     <h5 *ngIf="rfp.agency"><i class="far fa-building"></i>Agency : <a [routerLink]="['/agency']"
