--- a/src/app/admin-penal/admin-penal.component.html
+++ b/src/app/admin-penal/admin-penal.component.html
@@ -24,20 +24,27 @@
             <div *ngFor="let rfp of record;let i=index" class="card pos-rel">
               <div class="row">
                 <div class="col-sm-12">
-                  <div class="card-header card-header-text" data-background-color="purple">
-                    <a (click)="select()" [routerLink]="['/rfp/', rfp.seoTitleUrl]" >
+                  <div class="card-header card-header-text" data-background-color="purple" *ngIf="selected_model==true">
+                    <a (click)="select()" [routerLink]="['/rfp']"[queryParams]="{query:rfp.seoTitleUrl}" >
                       <h4 class="card-title">{{rfp.rfpkey}}</h4>
                     </a>
                   </div>
+                  <div class="card-header card-header-text" data-background-color="purple" *ngIf="selected_model==false">
+                      <a (click)="select()" [routerLink]="['/rfp']"[queryParams]="{query:rfp.seoTitleUrl, model: 'old'}" >
+                        <h4 class="card-title">{{rfp.rfpkey}}</h4>
+                      </a>
+                    </div>
                 </div>
                 <button class="fa btn sh fa-edit edit-del-btn" type="submit" value="Edit" type="submit" (click)="btnEditClick(rfp.id,rfp.rfpkey,rfp.rfp_number,rfp.title,rfp.descriptionTag,rfp.state,rfp.agency,rfp.date_entered,rfp.due_date,rfp.web_info,rfp.rfp_reference,rfp.new_category,rfp.sub_category,rfp.seoTitleUrl,rfp.bid_type,rfp.agency_type,rfp.city_or_county,rfp.city,rfp.open_rfp)"><span>
                     Edit </span>
                 </button>
                 <div class="card-content">
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 plan-detail">
-                    <h3>
-                      <a class="curser-pointer" (click)="select()" [routerLink]="['/rfp/', rfp.seoTitleUrl]"> {{rfp.title}}</a>
-                    </h3>
+                    <h3 *ngIf="selected_model==true">
+                      <a class="curser-pointer" (click)="select()" [routerLink]="['/rfp']"[queryParams]="{query:rfp.seoTitleUrl}"> {{rfp.title}}</a>
+                    </h3><h3 *ngIf="selected_model==false">
+                        <a class="curser-pointer" (click)="select()" [routerLink]="['/rfp']"[queryParams]="{query:rfp.seoTitleUrl, model: 'old'}"> {{rfp.title}}</a>
+                      </h3>
                     <h5 *ngIf="rfp?.agency">
                       <i class="far fa-building"></i>Agency : <span>{{rfp?.agency}}</span></h5>
                     <h5>
