--- a/src/app/advance-search/advance-search.component.html
+++ b/src/app/advance-search/advance-search.component.html
@@ -167,7 +167,7 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="card-header card-header-text" data-background-color="purple">
-                                <a class="curserr-pointer" [routerLink]="['/rfp/', rfp.seoTitleUrl]" (click)="move()">
+                                <a class="curserr-pointer" [routerLink]="['/rfp']"[queryParams]="{query:rfp.seoTitleUrl}" (click)="move()">
                                     <h4 class="card-title">{{rfp.rfpkey}}</h4>
                                 </a>
                             </div>
@@ -180,7 +180,7 @@
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 plan-detail">
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 plan-detail">
                                     <h3>
-                                        <a class="curser-pointer" [routerLink]="['/rfp/', rfp.seoTitleUrl]" (click)="move()">
+                                        <a class="curser-pointer" [routerLink]="['/rfp']"[queryParams]="{query:rfp.seoTitleUrl}" (click)="move()">
                                             {{rfp.title}}</a>
                                     </h3>
                                     
