--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -190,10 +190,10 @@
   <div class="heart-main-div">
   <!-- <img src="{{Imageurl}}{{data?.course.course_thumbnail}}" class="heart-img" alt="Course"> -->
   <div class="heart-contact">
-  <a [routerLink]="['/rfp/', data?.wrfp.seoTitleUrl]"> <div class="heart-heading curser-pointer">
+  <a [routerLink]="['/rfp']"[queryParams]="{query:data?.wrfp.seoTitleUrl}"> <div class="heart-heading curser-pointer">
   {{data?.wrfp.title}}
   </div></a>
-  <div class="heart-detail plan-detail curser-pointer" [routerLink]="['/rfp/', data?.wrfp.seoTitleUrl]" >
+  <div class="heart-detail plan-detail curser-pointer" [routerLink]="['/rfp']"[queryParams]="{query:data?.wrfp.seoTitleUrl}" >
   <h5><i class="fa fa-university"></i>Category : <span>{{data?.wrfp.new_category}}</span></h5>
   <h5><i class="fa fa-fort-awesome"></i>State : <span> {{data?.wrfp.state}}</span></h5>
   <h5 *ngIf="data?.wrfp.agency"><i class="fa fa-building-o"></i>Agency : <span>{{data?.wrfp.agency}}</span></h5>
