--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -248,14 +248,14 @@
               <div class="row">
                 <div class="col-sm-12">
                   <div class="card-header card-header-text" data-background-color="purple">
-                    <a class="curser-pointer" (click)="single( rfp.seoTitleUrl)">
+                    <a class="curser-pointer" [routerLink]="['/rfp']"[queryParams]="{query:rfp.seoTitleUrl}">
                       <h4 class="card-title">{{rfp.rfp_number}}</h4>
                     </a>
                   </div>
                   <div class="card-content">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 plan-detail">
                       <h3>
-                        <a class="curser-pointer" (click)="single( rfp.seoTitleUrl)"> {{rfp.title}}</a>
+                        <a class="curser-pointer" [routerLink]="['/rfp']"[queryParams]="{query:rfp.seoTitleUrl}"> {{rfp.title}}</a>
                       </h3>
                       <h5 *ngIf="rfp?.agency">
                        <i class="fa fa-building-o"></i> Agency : <span>{{rfp?.agency}}</span></h5>
